tests/snapshots/apply__json.snap
---
source: tests/apply.rs
expression: stdout
---
{"duration_ms":0,"event":"step","file":"tests/fixtures/apply/verdicts.yml","index":1,"line":3,"name":"An ungated shell cannot be judged","status":"unknown"}
{"duration_ms":0,"event":"step","file":"tests/fixtures/apply/verdicts.yml","index":2,"line":6,"name":"A gate that says the work is done","reason":"unless","status":"skipped"}
{"duration_ms":0,"event":"step","file":"tests/fixtures/apply/verdicts.yml","index":3,"line":10,"name":"changed_when decides","status":"changed"}
{"duration_ms":0,"event":"step","file":"tests/fixtures/apply/verdicts.yml","index":4,"line":15,"name":"A later step reads the register","status":"ok"}
{"duration_ms":0,"event":"step","file":"tests/fixtures/apply/verdicts.yml","index":5,"line":20,"name":"failed_when forgives a non-zero exit","status":"ok"}
{"changed":1,"duration_ms":0,"event":"summary","failed":0,"interrupted":false,"ok":2,"plan":"tests/fixtures/apply/verdicts.yml","skipped":1,"total":5,"unknown":1,"would_run":0,"would_run_unprobed":0}
