tests/snapshots/apply__plain.snap
---
source: tests/apply.rs
assertion_line: 609
expression: out
---
  tests/fixtures/apply/verdicts.yml
  ✓ An ungated shell is its own exit code            ok  [t]
  - A gate that says the work is done                skipped   unless  [t]
  ~ changed_when decides                             changed  [t]
  ✓ A later step reads the register                  ok  [t]
  ✓ failed_when forgives a non-zero exit             ok  [t]

  tests/fixtures/apply/verdicts.yml · 5 steps · 1 changed · 3 ok · 1 skipped · [t]
